--- a/ShareItApp/src/Component/css/Global/ScrollBar.css
+++ b/ShareItApp/src/Component/css/Global/ScrollBar.css
@@ -1,12 +1,15 @@
 body{
-    overflow: overlay;
+    overflow:scroll;
+    overflow-x: hidden;
 }
-
 ::-webkit-scrollbar{
-    width: 12px;
+    width: 15px;
 }
-
+::-webkit-scrollbar-track{
+    background: transparent;
+}
 ::-webkit-scrollbar-thumb{
-    background: linear-gradient(transparent,green);
-    border-radius: 6px;
+    background-color: tomato;
+    border-radius: 20px;
+    border: 3px solid transparent;
 }
